<resources>
    <string name="app_name">Top 11</string>
    <string name="api_baseUrl">http://football-manager.hol.es/app/</string>
    <!--Menus-->
    <string name="mainMenu_menuItemCreateLineup_title">Create new lineup</string>
    <string name="mainMenu_menuItemRefresh_title">Refresh lineups</string>
    <string name="mainMenu_menuItemLogout_title">Logout</string>
    <string name="lineup_menuItemSave_title">Save</string>
    <string name="lineup_menuItemLikes_title">Likes</string>
    <string name="lineup_menuItemComments_title">Comments</string>
    <string name="formationContextMenuTitle">Choose a formation</string>
    <string name="formation_4_4_2_title">4–4–2</string>
    <string name="formation_3_2_3_2_title">3–2–3–2</string>
    <string name="formation_4_2_3_1_title">4–2–3–1</string>
    <string name="formation_4_3_3_title">4–3–3</string>
    <!--Sidebar-->
    <string name="sidebar_header">
        Football \n Dream Eleven
    </string>
    <string name="sidebarOpen_title">Navigation</string>
    <string name="sidebar_drawerOpen_text">Open navigation drawer</string>
    <string name="sidebar_drawerClose_text">Close navigation drawer</string>
    <string name="sidebar_iconDescription">Sidebar item icon</string>
    <!--Error Loading Layout-->
    <string name="errorLoadingLayout_btnText">Try again</string>
    <string name="errorLoadingLayout_imageDec">Error icon</string>
    <!--First time started Message-->
    <string name="firstTimeStarted_title">Terms for using</string>
    <string name="firstTimeStarted_message">
        This application is for making a football dream team. The users can choose a dream lineup
        from a list of given players, and also they can like or comment the lineups of the other
        users. If you want to use this application you need to have a account which is free to make
        and will only take one minute.
    </string>
    <!--Internal server error Message-->
    <string name="internalServerError_title">Server Error</string>
    <string name="internalServerError_message">
        There is some problems with our servers. Please try again later.
    </string>
    <!--Socket Timeout-->
    <string name="socketTimeout_title">Timeout</string>
    <string name="socketTimeout_message">
        The connection to the server timeout out. Please try again later.
    </string>
    <!--No Internet Connection-->
    <string name="noInternetConnection_title">No Internet Connection</string>
    <string name="noInternetConnection_message">
        You need internet connection in order to access to the resource. Please
        enable internet and try again.
    </string>
    <string name="initialDataLoading_title">Loading initial data</string>
    <string name="initialDataLoading_message">
        Loading the initial data from the server. This data is loaded only when the application
        is started for the first time, so this may take a minute. Please be patient.
    </string>
    <!--LoginActivity-->
    <string name="loginLayout_title">Login</string>
    <string name="loginLayout_txtEmail_hint">Email</string>
    <string name="loginLayout_txtEmail_requiredErrorMessage">
        The email field is required
    </string>
    <string name="loginLayout_txtEmail_invalidErrorMessage">The email is invalid</string>
    <string name="loginLayout_txtPassword_hint">Password</string>
    <string name="loginLayout_txtPassword_requiredErrorMessage">
        The password field is required
    </string>
    <string name="loginLayout_btnLogin">Login</string>
    <string name="loginLayout_btnRegister">Register</string>
    <!--Register Activity-->
    <string name="registerLayout_title">Register</string>
    <string name="registerLayout_txtName_hint">Name</string>
    <string name="registerLayout_txtName_requiredErrorMessage">
        The name field is required.
    </string>
    <string name="registerLayout_txtEmail_hint">Email</string>
    <string name="registerLayout_txtEmail_requiredErrorMessage">
        The email field is required.
    </string>
    <string name="registerLayout_txtEmail_invalidErrorMessage">
        The email is invalid.
    </string>
    <string name="registerLayout_txtPassword_hint">Password</string>
    <string name="registerLayout_txtPassword_requiredErrorMessage">
        The password field is required.
    </string>
    <string name="registerLayout_txtRepeatPassword_hint">Repeat Password</string>
    <string name="registerLayout_txtRepeatPassword_requiredErrorMessage">
        The repeat password field is required.
    </string>
    <string name="registerLayout_txtRepeatPassword_notMatchErrorMessage">
        The passwords don\'t match.
    </string>
    <string name="registerLayout_btnRegister">Register</string>
    <!--Home Activity-->
    <string name="homeLayout_title">Home</string>
    <string name="homeLayout_spinnerTeamsLoading_text">Loading teams…</string>
    <string name="homeLayout_teamsLoadingFailed_text">
        Error occurred while loading the teams.
    </string>
    <string name="homeLayout_spinnerTeamsStoring_text">Storing teams…</string>
    <string name="homeLayout_teamsStoringFailed_text">
        Error occurred while storing the teams.
    </string>
    <string name="homeLayout_spinnerPositionsLoading_text">Loading positions…</string>
    <string name="homeLayout_positionsLoadingFailed_text">
        Error occurred while loading the positions.
    </string>
    <string name="homeLayout_spinnerPositionsStoring_text">Storing positions…</string>
    <string name="homeLayout_positionsStoringFailed_text">
        Error occurred while storing the positions.
    </string>
    <string name="homeLayout_spinnerPlayersLoading_text">Loading players…</string>
    <string name="homeLayout_playersLoadingFailed_text">
        Error occurred while loading the players.
    </string>
    <string name="homeLayout_spinnerPlayersStoring_text">Storing players…</string>
    <string name="homeLayout_playersStoringFailed_text">
        Error occurred while storing the players
    </string>
    <!--ListLineupsFragment-->
    <string name="listLineupsLayout_spinnerLoadingLineups_text">
        Loading latest lineups…
    </string>
    <string name="listLineupsLayout_spinnerRefreshingLineups_text">
        Refreshing lineups data…
    </string>
    <string name="listLineupLayout_loadingFailed_test">
        Error occurred while loading the lineups.
    </string>
    <string name="listLineupLayout_refreshingFailed_text">
        Error occurred while refreshing the lineups.
    </string>
    <string name="listLineupsLayout_headerText">Latest lineups</string>
    <string name="listLineupLayout_deletingSuccess_text">
        Lineup has been deleted successfully.
    </string>
    <string name="listLineupLayout_deletingFailed_text">
        Error occurred while deleting the lineup.
    </string>
    <!--Lineups List View-->
    <string name="lineupsListViewItem_imageDesc">Lineup image</string>
    <string name="lineupsListView_loadMoreBtnText">Load More</string>
    <string name="lineupsListView_likesContent_text">Likes</string>
    <string name="lineupsListView_commentsContent_text">Comments</string>
    <!--Like Fragment-->
    <string name="likesFragment_title">Likes</string>
    <string name="btnAddLike_text">Add Like</string>
    <string name="btnRemoveLike_text">Remove Like</string>
    <string name="likesFragment_spinnerLoadingText">Loading likes…</string>
    <string name="likesFragment_likeAddingFailed_text">
        Error occurred while adding the like
    </string>
    <string name="likesFragment_likeRemovingFailed_text">
        Error occurred while removing the like
    </string>
    <!--Comment Fragment-->
    <string name="commentsLayout_title">Comments</string>
    <string name="commentsLayout_btnAddComment_text">Add Comment</string>
    <string name="commentsLayout_spinnerText">Loading comments…</string>
    <string name="commentsLayout_loadingCommentsFailed_text">
        Error occurred while loading the comments.
    </string>
    <string name="commentsLayout_addingCommentSuccess_text">
        Comment was added successfully.
    </string>
    <string name="commentsLayout_addingCommentFailed_text">
        Error occurred while adding the comment.
    </string>
    <string name="commentsLayout_updatingCommentSuccess_text">
        Comment was updated successfully.
    </string>
    <string name="commentsLayout_updatingCommentFailed_text">
        Error occurred while updating the comment.
    </string>
    <string name="commentLayout_deletingCommentSuccess_text">
        Comment was deleted successfully.
    </string>
    <string name="commentLayout_deletingCommentFailed_text">
        Error occurred while deleting the comment.
    </string>
    <!--LineupPlayers Activity-->
    <string name="lineupPlayersActivity_title">Lineup Players</string>
    <string name="lineupPlayersActivity_spinnerLoadPlayers_text">Loading lineup players…</string>
    <string name="lineupPlayersActivity_loadingLineupFailed_text">
        Error occurred while loading the lineup players.
    </string>
    <string name="lineupPlayersActivity_spinnerUpdatingLineup_text">
        Updating lineup players…
    </string>
    <string name="lineupPlayersLayout_updateLineupError_text">
        Error occurred while updating the lineup data.
    </string>
    <!--ListPositionPlayers Fragment-->
    <string name="positionsPlayers_nameColumn">Name</string>
    <string name="positionsPlayers_ageColumn">Age</string>
    <string name="positionsPlayers_teamColumn">Team</string>
    <string name="positionsPlayers_positionColumn">Position</string>
    <!--PlayerDetails Dialog-->
    <string name="playerDetails_imageDesc">Player Image</string>
    <string name="playerDetails_teamLabel">Team: </string>
    <string name="playerDetails_ageLabel">Age: </string>
    <string name="playerDetails_positionLabel">Natural position: </string>
    <string name="playerDetails_btnRemove">Remove</string>
    <!--Create Lineup View-->
    <string name="createLineupView_title">Create a new lineup</string>
    <string name="createLineupView_btnSave">Save</string>
    <string name="createLineupView_iconChangeFormation_desc">Change lineup formation</string>
    <string name="createLineupView_spinnerCreateLineup_text">Saving lineup data…</string>
    <string name="createLineupView_requestFailedText">
        Error occurred while saving the lineup.
    </string>
    <string name="createLineupView_lineupCreateSuccessful_text">
        The lineup has been crated successfully.
    </string>
    <!--LineupActivity Confirm dialog-->
    <string name="lineupActivity_confirmDialog_title">Discard changed</string>
    <string name="lineupActivity_confirmDialog_message">
        The changes in the lineup are not yet saved. Are you sure you want to exit?
    </string>
    <!--UserStatisticService-->
    <string name="notification_ticker">New Notification</string>
    <string name="notification_title">Awesome lineup!</string>
    <string name="notification_body">
        There are %1$d new likes and %2$d new comments on your last lineup
    </string>
</resources>
