<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RootView"
    android:orientation="vertical">
    <include
        layout="@layout/toolbar" />
    <LinearLayout
        style="@style/MainContent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <EditText
            android:id="@+id/loginLayout_txtEmail"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/loginLayout_txtEmail_hint" />
        <TextView
            android:id="@+id/loginLayout_email_requiredError"
            style="@style/TextView.Block.Error.Small"
            android:visibility="gone"
            android:text="@string/loginLayout_txtEmail_requiredErrorMessage"/>
        <TextView
            android:id="@+id/loginLayout_email_invalidError"
            style="@style/TextView.Block.Error.Small"
            android:visibility="gone"
            android:text="@string/loginLayout_txtEmail_invalidErrorMessage"/>
        <EditText
            android:id="@+id/loginLayout_txtPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:hint="@string/loginLayout_txtPassword_hint" />
        <TextView
            android:id="@+id/loginLayout_password_requiredError"
            style="@style/TextView.Block.Error.Small"
            android:visibility="gone"
            android:text="@string/loginLayout_txtPassword_requiredErrorMessage"/>
        <LinearLayout
            android:id="@+id/loginLayout_btnLogin"
            style="@style/Button.Block.Primary">
            <TextView
                android:id="@+id/loginLayout_btnLoginText"
                style="@style/TextView.Button.Primary"
                android:layout_marginRight="@dimen/base_horizontalMargin"
                android:layout_marginEnd="@dimen/base_horizontalMargin"
                android:text="@string/loginLayout_btnLogin" />
            <ProgressBar
                style="@style/ButtonSpinner"
                android:id="@+id/loginLayout_spinner"
                android:visibility="gone" />
        </LinearLayout>
        <Button
            android:id="@+id/loginLayout_btnRegister"
            style="@style/Button.Block.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/loginLayout_btnRegister" />
        <LinearLayout
            android:id="@+id/loginLayout_errorsContainer"
            style="@style/ErrorContainer"
            android:orientation="vertical"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>